<resources>
    <string name="app_name">TipCalculator</string>

    <string name="label_amount_bill">Bill</string>
    <string name="label_tip_percent">Tip (%)</string>
    <string name="label_amount_tip">Tip ($)</string>
    <string name="label_total">Total</string>

    <string name="amount_bill_hint">Enter Amount</string>
    <string name="amount_tip_percent_hint">Enter Tip</string>
</resources>